--- a/package.json
+++ b/package.json
@@ -45,19 +45,19 @@
     "@storybook/addon-docs": "^10.0.6",
     "@storybook/addon-onboarding": "^10.0.6",
     "@storybook/addon-vitest": "^10.0.6",
+    "@storybook/nextjs-vite": "^10.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vitest/browser-playwright": "^4.0.8",
+    "@vitest/coverage-v8": "^4.0.8",
+    "playwright": "^1.56.1",
     "postcss": "^8",
     "storybook": "^10.0.6",
     "tailwind-merge": "^2",
     "tailwindcss": "^3",
     "tailwindcss-animate": "^1",
     "typescript": "^5",
-    "@storybook/nextjs-vite": "^10.0.6",
-    "vitest": "^4.0.8",
-    "playwright": "^1.56.1",
-    "@vitest/browser-playwright": "^4.0.8",
-    "@vitest/coverage-v8": "^4.0.8"
+    "vitest": "^4.0.8"
   }
 }
