--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
     "embla-carousel-react": "^8.5.2",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.468.0",
     "next": "^14.2.33",
     "next-themes": "^0.2.1",
